# OpenGL-cpp

./: .gitignore  CMakeLists.txt  Main.cpp  vcpkg.json
res/shaders/: first.vert  second.vert  third.vert
src/: Camera.cpp  Camera.hpp  Common.hpp  Maths.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp
src/Maths/: Mat4.cpp  Mat4.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
tests/: CMakeLists.txt  TestsCommon.hpp  TestsMat4.cpp  TestsVec3.cpp  TestsVec4.cpp
